--- a/android/app/src/main/res/layout/skillcard.xml
+++ b/android/app/src/main/res/layout/skillcard.xml
@@ -5,21 +5,23 @@
 
     <RelativeLayout
         android:id="@+id/ard"
-        android:layout_width="match_parent"
+        android:layout_width="177dp"
         android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/cardtext"
-            android:text="Do i need this ?"/>
-
         <com.google.android.material.button.MaterialButton
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="skillbutton"
-            android:id="@+id/skillbutton">
-        </com.google.android.material.button.MaterialButton>
+            android:id="@+id/skillbutton"
+            android:layout_width="209dp"
+            android:layout_height="74dp"
+            android:text="skillbutton"></com.google.android.material.button.MaterialButton>
+
+        <TextView
+            android:id="@+id/cardtext"
+            android:layout_width="64dp"
+            android:layout_height="40dp"
+            android:layout_below="@+id/skillbutton"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:text="Explaination" />
 
 
     </RelativeLayout>
