--- a/android/app/src/main/res/layout/activity_dialog_screen.xml
+++ b/android/app/src/main/res/layout/activity_dialog_screen.xml
@@ -42,9 +42,18 @@
             android:gravity="center"
             android:layout_weight="1"/>
 
-        <View
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/location"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:text="location"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:textAlignment="center"
+            android:gravity="center"
             android:layout_weight="1"/>
 
     </LinearLayout>
