--- a/android/app/src/main/res/anim/slide_in_bottom.xml
+++ b/android/app/src/main/res/anim/slide_in_bottom.xml
@@ -1,5 +1,10 @@
-<translate xmlns:android="http://schemas.android.com/apk/res/android"
-    android:duration="300"
-    android:fromYDelta="100%p"
-    android:toYDelta="0"
-    android:interpolator="@android:interpolator/decelerate_quad" />
+<set xmlns:android="http://schemas.android.com/apk/res/android">
+    <translate
+        android:duration="300"
+        android:fromYDelta="100%p"
+        android:toYDelta="0" />
+    <alpha
+        android:duration="300"
+        android:fromAlpha="0.0"
+        android:toAlpha="1.0" />
+</set>
