--- a/android/app/src/main/res/anim/slide_out_bottom.xml
+++ b/android/app/src/main/res/anim/slide_out_bottom.xml
@@ -1,5 +1,10 @@
-<translate xmlns:android="http://schemas.android.com/apk/res/android"
-    android:duration="200"
-    android:fromYDelta="0"
-    android:toYDelta="100%p"
-    android:interpolator="@android:interpolator/accelerate_quad" />
+<set xmlns:android="http://schemas.android.com/apk/res/android">
+    <translate
+        android:duration="220"
+        android:fromYDelta="0"
+        android:toYDelta="100%p" />
+    <alpha
+        android:duration="300"
+        android:fromAlpha="1.0"
+        android:toAlpha="0.0" />
+</set>
