--- a/android/app/src/main/res/layout/activity_dialog_screen.xml
+++ b/android/app/src/main/res/layout/activity_dialog_screen.xml
@@ -42,19 +42,31 @@
             android:gravity="center"
             android:layout_weight="1"/>
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/location"
+        <LinearLayout
+            android:id="@+id/topBarRight"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:text="location"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:textAlignment="center"
-            android:gravity="center"
-            android:layout_weight="1"/>
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:gravity="center_vertical|end"
+            android:padding="5dp"
+            android:layout_weight="1">
+
+            <ImageView
+                android:id="@+id/imgLocation"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                app:srcCompat="@drawable/location" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/location"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:text="location"
+                android:textStyle="bold"
+                android:paddingStart="4dp" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
