Hashmap for color , color to indicate friend or enemy

--- a/android/app/src/main/res/drawable/bold_cell_border_red.xml
+++ b/android/app/src/main/res/drawable/bold_cell_border_red.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+    android:shape="rectangle"
+    >
     <solid android:color="#FFFFFF"/> <!-- Background color -->
     <stroke
         android:width="5dp"
-        android:color="#CCCCCC"/> <!-- Border color -->
+        android:color="#fa938c"/> <!-- Border color -->
+    <corners android:radius="16px"/>
+
 </shape>
