--- a/android/app/src/main/res/drawable/cell_border_red.xml
+++ b/android/app/src/main/res/drawable/cell_border_red.xml
@@ -4,5 +4,6 @@
     <solid android:color="#FFFFFF"/> <!-- Background color -->
     <stroke
         android:width="2dp"
-        android:color="#CCCCCC"/> <!-- Border color -->
+        android:color="#fa938c"/> <!-- Border color -->
+    <corners android:radius="16px"/>
 </shape>
