--- a/android/app/src/main/res/drawable/cell_border_green.xml
+++ b/android/app/src/main/res/drawable/cell_border_green.xml
@@ -2,10 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle"
     >
-    <solid android:color="#FFFFFF"/> <!-- Background color -->
-    <stroke
-        android:width="2dp"
-        android:color="#a4fa8c"/> <!-- Border color -->
+    <solid android:color="#6e7575"/> <!-- Background color -->
     <corners android:radius="16px"/>
 
 </shape>
