--- a/android/app/src/main/res/drawable/cell_border_red.xml
+++ b/android/app/src/main/res/drawable/cell_border_red.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#FFFFFF"/> <!-- Background color -->
-    <stroke
-        android:width="2dp"
-        android:color="#fa938c"/> <!-- Border color -->
+    <solid android:color="#6e7575"/> <!-- Background color -->
+
     <corners android:radius="16px"/>
 </shape>
