--- a/android/app/src/main/res/layout/location_dropdown.xml
+++ b/android/app/src/main/res/layout/location_dropdown.xml
@@ -65,7 +65,7 @@
             android:id="@+id/locationRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="gone" />
+            android:visibility="visible" />
 
 
     </LinearLayout>
