--- a/android/app/src/main/res/layout/activity_combat_screen.xml
+++ b/android/app/src/main/res/layout/activity_combat_screen.xml
@@ -13,30 +13,44 @@
         android:layout_width="400px"
         android:layout_height="171dp"
         app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
-
         app:layout_constraintEnd_toStartOf="@+id/imageView3"
         app:layout_constraintHorizontal_bias="0.292"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/messages"
+        app:layout_constraintTop_toBottomOf="@+id/messagesCard"
         app:layout_constraintVertical_bias="0.346" />
 
-    <ScrollView
-        android:id="@+id/messages"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/messagesCard"
         android:layout_width="410dp"
         android:layout_height="100dp"
-        android:background="@color/palepurpleCard"
-        android:padding="5dp"
-
+        android:layout_margin="4dp"
+        app:cardBackgroundColor="@color/palepurpleCard"
+        app:cardCornerRadius="12dp"
+        app:cardElevation="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/combatTitle">
 
-        <LinearLayout
-            android:id="@+id/CombatMessageLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" />
-    </ScrollView>
+
+        <ScrollView
+            android:id="@+id/messages"
+            android:layout_width="410dp"
+            android:layout_height="100dp"
+            android:padding="5dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/combatTitle">
+
+            <LinearLayout
+                android:id="@+id/CombatMessageLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" />
+        </ScrollView>
+
+    </androidx.cardview.widget.CardView>
+
+
 
     <TextView
         android:id="@+id/combatTitle"
@@ -59,7 +73,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.772"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/messages"
+        app:layout_constraintTop_toBottomOf="@+id/messagesCard"
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/kid2" />
 
@@ -75,7 +89,7 @@
         app:layout_constraintEnd_toEndOf="@+id/imageView3"
         app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintStart_toStartOf="@+id/imageView3"
-        app:layout_constraintTop_toBottomOf="@+id/messages"
+        app:layout_constraintTop_toBottomOf="@+id/messagesCard"
         app:layout_constraintVertical_bias="0.979" />
 
     <TextView
@@ -114,7 +128,7 @@
         app:layout_constraintHorizontal_bias="0.0"
 
         app:layout_constraintStart_toStartOf="@+id/imageView3"
-        app:layout_constraintTop_toBottomOf="@+id/messages"
+        app:layout_constraintTop_toBottomOf="@+id/messagesCard"
         app:layout_constraintVertical_bias="0.968" />
 
     <ImageView
@@ -125,7 +139,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.032"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/messages"
+        app:layout_constraintTop_toBottomOf="@+id/messagesCard"
         app:layout_constraintVertical_bias="0.936"
         app:srcCompat="@drawable/kid1" />
 
@@ -138,7 +152,7 @@
         app:layout_constraintBottom_toTopOf="@+id/turnCombatSquence"
         app:layout_constraintEnd_toEndOf="@+id/turnCombatSquence"
         app:layout_constraintStart_toStartOf="@+id/turnCombatSquence"
-        app:layout_constraintTop_toBottomOf="@+id/messages"
+        app:layout_constraintTop_toBottomOf="@+id/messagesCard"
         app:layout_constraintVertical_bias="1.0" />
 
     <TextView
