--- a/android/app/src/main/res/layout/skillcard.xml
+++ b/android/app/src/main/res/layout/skillcard.xml
@@ -16,8 +16,9 @@
 
         <TextView
             android:id="@+id/cardtext"
-            android:layout_width="64dp"
-            android:layout_height="40dp"
+            android:gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/skillbutton"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
