--- a/android/app/src/main/res/layout/activity_combat_screen.xml
+++ b/android/app/src/main/res/layout/activity_combat_screen.xml
@@ -189,14 +189,14 @@
         android:id="@+id/turnCombat"
         android:layout_width="157dp"
         android:layout_height="24dp"
-        android:gravity="top"
+        android:gravity="center"
         android:text="Combat turn"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/initiativeScrollView"
         app:layout_constraintEnd_toEndOf="@+id/initiativeScrollView"
         app:layout_constraintStart_toStartOf="@+id/initiativeScrollView"
         app:layout_constraintTop_toBottomOf="@+id/messagesCard"
-        app:layout_constraintVertical_bias="0.1"
+        app:layout_constraintVertical_bias="0.5"
         />
 
     <TextView
