--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -28,6 +28,7 @@
         <item name="shapeAppearance">@style/ShapeAppearance.App.MediumComponent</item>
         <item name="shapeAppearanceOverlay">@null</item>
         <item name="android:windowIsFloating">true</item>
+        <item name="android:background">@color/white</item>
     </style>
     // TODO: Fix dialog animation (Change the fly in from top right)
 
